--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Website</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>XLR Security - Our Community</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>This is a simple site built in Notepad++</p>
+    <header>
+        <h1>Our Community</h1>
+        <h2>Welcome to our community page</h2>
+        <p>A showcase of incredible projects our talented installers successfully finished.</p>
+    </header>
+
+    <main>
+        <section class="gallery" id="project-gallery">
+            <!-- JavaScript will inject project cards here -->
+        </section>
+    </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
