--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Our Community</h1>
-        <h2>Welcome to our community page</h2>
+        <h2 aling="Center">Welcome to our community page</h2>
         <p>A showcase of incredible projects our talented installers successfully finished.</p>
     </header>
 
