Updated website design with new color scheme and layout

--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,21 @@
 <body>
     <header>
         <h1>Our Community</h1>
-        <h2 aling="Center">Welcome to our community page</h2>
+        <h2>Welcome to our community page</h2>
         <p>A showcase of incredible projects our talented installers successfully finished.</p>
     </header>
 
     <main>
         <section class="gallery" id="project-gallery">
-            <!-- JavaScript will inject project cards here -->
+            <!-- Project cards will be added here by JavaScript -->
+            <div class="project-grid">
+                <!-- Example project card (you can duplicate this structure in JavaScript) -->
+                <div class="project-card">
+                    <img src="images/project1.jpg" alt="Security System Installation">
+                    <h3>Residential Security</h3>
+                    <p>Completed in May 2024</p>
+                </div>
+            </div>
         </section>
     </main>
     <script src="script.js"></script>
