--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
 
     <main>
         <section class="gallery" id="project-gallery">
-            <!-- JavaScript will inject project cards here -->
+            <!-- Project cards will be added here by JavaScript -->
+            <div class="project-grid">
+                <!-- Example project card (you can duplicate this structure in JavaScript) -->
+                <div class="project-card">
+                    <img src="images/project1.jpg" alt="Security System Installation">
+                    <h3>Residential Security</h3>
+                    <p>Completed in May 2024</p>
+                </div>
+            </div>
         </section>
     </main>
-
     <script src="script.js"></script>
 </body>
 </html>
